force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Task_Key__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Task_Key__c</fullName>
    <label>Task Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>