force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Task_Planned_Value__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Task_Planned_Value__c</fullName>
    <description>Planned Value defines the budgeted amount through the current reporting period.</description>
    <formula>IF( 
  TODAY() &lt; inspire1__Start_Date__c, 0,
  IF (TODAY() &gt; inspire1__Finish_Date_Only__c,  inspire1__Budgeted_Cost__c,
  (((inspire1__Duration__c -(inspire1__Finish_Date_Only__c - TODAY()+1))/ inspire1__Duration__c ) *  inspire1__Budgeted_Cost__c )
)
)</formula>
    <inlineHelpText>Planned Value defines the budgeted amount through the current reporting period.</inlineHelpText>
    <label>Task Planned Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>