force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Task_Type__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Task_Type__c</fullName>
    <description>Defines if the task is either a grouping or a working task.</description>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Task</fullName>
                <default>true</default>
                <label>Task</label>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>