force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Time_Tracking_Only__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Time_Tracking_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Defines the task as time tracking only task.  Thus it does not count towards duration or % Complete of project.</description>
    <label>Time Tracking Only</label>
    <type>Checkbox</type>
</CustomField>