force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Total_Planned_Effort__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Total_Planned_Effort__c</fullName>
    <description>Total hours planned for project task across all assigned resources.  Rollup from all related Salesforce tasks.</description>
    <inlineHelpText>Total hours planned for project task across all assigned resources.</inlineHelpText>
    <label>Total Allocated Effort</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>