force-app/main/default/objects/inspire1__Project_Tasks__c/fields/inspire1__Total_Slack__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Total_Slack__c</fullName>
    <description>The total slack (or total float) is the amount of time that this task can be delayed without causing a delay to the project end.</description>
    <inlineHelpText>The total slack (or total float) is the amount of time that this task can be delayed without causing a delay to the project end.</inlineHelpText>
    <label>Total Slack</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>