force-app/main/default/objects/inspire1__Project_Tasks__c/fields/IsParent__c.field-meta.xml
<CustomField>
    <fullName>IsParent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsParent</label>
    <type>Checkbox</type>
</CustomField>