force-app/main/default/objects/inspire1__Project_Tasks__c/fields/Lag__c.field-meta.xml
<CustomField>
    <fullName>Lag__c</fullName>
    <label>Lag (Days)</label>
    <length>50</length>
    <type>Text</type>
</CustomField>