force-app/main/default/objects/inspire1__Project_Tasks__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <label>Parent</label>
    <length>10</length>
    <type>Text</type>
</CustomField>