force-app/main/default/objects/inspire1__Project_Tasks__c/fields/Parent_sub_task__c.field-meta.xml
<CustomField>
    <fullName>Parent_sub_task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent sub task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.inspire1__Project__c</field>
            <operation>equals</operation>
            <valueField>inspire1__Project_Tasks__c.inspire1__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>inspire1__Project_Tasks__c</referenceTo>
    <relationshipLabel>Project Tasks (Parent sub task)</relationshipLabel>
    <relationshipName>Project_Tasks1</relationshipName>
    <type>Lookup</type>
</CustomField>