force-app/main/default/objects/inspire1__Project_Tasks__c/fields/Program_Id__c.field-meta.xml
<CustomField>
    <fullName>Program_Id__c</fullName>
    <formula>CASESAFEID(inspire1__Project__r.Program__c)</formula>
    <label>Program Id</label>
    <type>Text</type>
</CustomField>