force-app/main/default/objects/inspire1__Project_Tasks__c/fields/ProgramName__c.field-meta.xml
<CustomField>
    <fullName>ProgramName__c</fullName>
    <formula>inspire1__Project__r.Program_Name__c</formula>
    <label>Program Name</label>
    <type>Text</type>
</CustomField>