force-app/main/default/objects/inspire1__Project_Tasks__c/fields/Project_Task_updater__c.field-meta.xml
<CustomField>
    <fullName>Project_Task_updater__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Task updater</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.inspire1__Project__c</field>
            <operation>equals</operation>
            <valueField>$Source.inspire1__Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>inspire1__Project_Tasks__c</referenceTo>
    <relationshipLabel>Project Tasks (Project Task updater)</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>