force-app/main/default/objects/inspire1__Project_Tasks__c/fields/Schedule_Automation__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Automation__c</fullName>
    <formula>inspire1__Project__r.Schedule_Automation__c</formula>
    <label>Schedule Automation</label>
    <type>Checkbox</type>
</CustomField>