force-app/main/default/objects/inspire1__Project_Tasks__c/fields/Task_Category__c.field-meta.xml
<CustomField>
    <fullName>Task_Category__c</fullName>
    <label>Task Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Certificate Decision</fullName>
            </value>
            <value>
                <fullName>Conduct Audit</fullName>
            </value>
            <value>
                <fullName>Final Invoice Sent</fullName>
            </value>
            <value>
                <fullName>Final Payment Received</fullName>
            </value>
            <value>
                <fullName>Initial Invoice Sent</fullName>
            </value>
            <value>
                <fullName>Initial Payment Received</fullName>
            </value>
            <value>
                <fullName>WO Sent</fullName>
            </value>
            <value>
                <fullName>WO Signed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>