force-app/main/default/objects/inspire1__Project_Tasks__c/fields/Weekend_Are_Workday__c.field-meta.xml
<CustomField>
    <fullName>Weekend_Are_Workday__c</fullName>
    <formula>inspire1__Project__r.inspire1__WeekendAreWorkday__c</formula>
    <label>Weekend Are Workday</label>
    <type>Checkbox</type>
</CustomField>