force-app/main/default/objects/inspire1__Project_Tasks__c/validationRules/inspire1__Open_Checklist_Items.validationRule-meta.xml
<ValidationRule>
    <fullName>inspire1__Open_Checklist_Items</fullName>
    <active>true</active>
    <description>Cannot update Project Task to completed if open Checklist items remain.</description>
    <errorConditionFormula>AND(
   ISCHANGED( inspire1__Status__c ),
   OR(
      ISPICKVAL(inspire1__Status__c,&quot;Completed&quot;),
      TEXT(inspire1__Status__c) = $Setup.inspire1__InspirePlannerConfig__c.inspire1__Task_Status_Completed__c
      ),
 inspire1__Remaining_Checklist_Items__c &gt; 0
   )</errorConditionFormula>
    <errorMessage>You cannot close this Project Task since there are required Checklist items still open. Please complete the required Checklist items first.</errorMessage>
</ValidationRule>