force-app/main/default/objects/inspire1__Project_Tasks__c/listViews/inspire1__All.listView-meta.xml
<ListView>
    <fullName>inspire1__All</fullName>
    <columns>inspire1__Project__c</columns>
    <columns>NAME</columns>
    <columns>inspire1__Parent_Task__c</columns>
    <columns>inspire1__Start_Date__c</columns>
    <columns>inspire1__Finish_Date__c</columns>
    <columns>inspire1__Status__c</columns>
    <columns>inspire1__Task_Type__c</columns>
    <columns>inspire1__RowNumber__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>inspire1__Predecessors__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>inspire1__Project__c</field>
        <operation>equals</operation>
        <value>Save Logic Standard User Jupiter Disabled</value>
    </filters>
    <label>All</label>
</ListView>