force-app/main/default/objects/inspire1__Project_Tasks__c/listViews/inspire1__PTask_Project.listView-meta.xml
<ListView>
    <fullName>inspire1__PTask_Project</fullName>
    <columns>UPDATEDBY_USER</columns>
    <columns>inspire1__RowNumber__c</columns>
    <columns>NAME</columns>
    <columns>inspire1__Status__c</columns>
    <columns>inspire1__Done__c</columns>
    <columns>inspire1__Duration__c</columns>
    <columns>inspire1__StartDate__c</columns>
    <columns>inspire1__FinishDate__c</columns>
    <columns>inspire1__Predecessors__c</columns>
    <columns>inspire1__Parent_Task__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Project Tasks</label>
</ListView>